// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CHeaderToggler customize 1`] = `
<div>
  <button
    class="header-toggler bazinga"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`loads and displays CHeaderToggler component 1`] = `
<div>
  <button
    class="header-toggler"
    type="button"
  >
    Test
  </button>
</div>
`;
